// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellMultiselect - Snapshot should render default settings correctly 1`] = `
<MultiselectItem
  isSelected={false}
  style={Object {}}
  testID="cell-multi-select"
>
  <CellBase
    avatarProps={
      Object {
        "jazzIconProps": Object {
          "address": "0x10e08af911f2e489480fb2855b24771745d0198b50f5c55891369844a8c57092",
        },
        "variant": "JazzIcon",
      }
    }
    title="Orangefox.eth"
  />
</MultiselectItem>
`;

exports[`CellMultiselect - Snapshot should render the proper selected state 1`] = `
<MultiselectItem
  isSelected={true}
  style={Object {}}
  testID="cell-multi-select"
>
  <CellBase
    avatarProps={
      Object {
        "jazzIconProps": Object {
          "address": "0x10e08af911f2e489480fb2855b24771745d0198b50f5c55891369844a8c57092",
        },
        "variant": "JazzIcon",
      }
    }
    title="Orangefox.eth"
  />
</MultiselectItem>
`;
